<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:id="@+id/terminalText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/bront_font"
        android:gravity="bottom"
        android:inputType="textMultiLine|textNoSuggestions"
        android:isScrollContainer="true"
        android:minHeight="150dp"
        android:selectAllOnFocus="false"
        android:textColor="@color/colorTerminalText_1"
        android:textColorHighlight="@color/colorTerminalText_2"
        android:textColorHint="@color/colorTerminalText_3"
        android:textSize="@dimen/terminal_log"
        app:layout_constraintBottom_toTopOf="@+id/writableText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <EditText
        android:id="@+id/writableText"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:background="@color/colorTerminalText_4"
        android:ems="10"
        android:fadeScrollbars="false"
        android:fontFamily="@font/bront_font"
        android:inputType="textPersonName"
        android:shadowColor="@color/colorTerminalText_1"
        android:text="Name"
        android:textColor="@color/colorTerminalText_1"
        android:textColorHighlight="@color/colorTerminalText_2"
        android:textColorHint="@color/colorTerminalText_3"
        android:textColorLink="@color/colorTerminalText_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/colorTerminalText_4"
        android:fontFamily="@font/bront_font"
        android:text="@string/sendButton"
        android:textColor="@color/colorTerminalText_1"
        android:textColorHighlight="@color/colorTerminalText_2"
        android:textColorHint="@color/colorTerminalText_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/writableText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@color/colorTerminalText_4"
        android:fontFamily="@font/bront_font"
        android:text="@string/stopButton"
        android:textColor="@color/colorTerminalText_1"
        android:textColorHighlight="@color/colorTerminalText_2"
        android:textColorHint="@color/colorTerminalText_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorTerminalText_4"
        android:fontFamily="@font/bront_font"
        android:text="@string/clearButton"
        android:textColor="@color/colorTerminalText_1"
        android:textColorHighlight="@color/colorTerminalText_2"
        android:textColorHint="@color/colorTerminalText_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopButton" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorTerminalText_4"
        android:fontFamily="@font/bront_font"
        android:text="@string/startButton"
        android:textColor="@color/colorTerminalText_1"
        android:textColorHighlight="@color/colorTerminalText_2"
        android:textColorHint="@color/colorTerminalText_3"
        app:layout_constraintEnd_toStartOf="@+id/stopButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>